Revert "Add whether OpenID Connect is configured"

--- a/Projects/SealWebServer/appsettings.json
+++ b/Projects/SealWebServer/appsettings.json
@@ -25,7 +25,6 @@
     "ClientId": "interactive.confidential",
     "AccessKeySecret": "secret",
     "Id4EndPoint": "https://demo.identityserver.io/",
-    "Name": "identity",
-    "Enabled": false  
+    "Name": "identity"
   }
 }
